# fitz-sage

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASENOTES.md  fitz-gov-2.0-benchmark.txt  fitz-gov-2.0-results.txt  fitz.ps1  pyproject.toml  rag_pipeline_test.py  run_benchmark_simple.py  run_end_to_end.py  run_fitz_gov_benchmark.py  run_targeted_benchmark.py  test_sales.csv
.claude/: settings.local.json
.fitz/: config.yaml
.fitz-graveyard/plans/: plan_64b64e80bbb6_20260227_002306.md  plan_fcbad2ccbc06_20260226_150641.md  plan_ideal_reference.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mutation.yml  release.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cli/: cli.py
core/config/: loader.py  schema.py
core/core/: chunk.py
core/exceptions/: base.py  llm.py
core/llm/: __init__.py  credentials.py  registry.py
core/logging/: logger.py
core/models/: chunk.py
core/vector_db/: __init__.py  base.py  engine.py  registry.py  writer.py
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CLARA.md  CLI.md  CONFIG.md  CONFIG_EXAMPLES.md  CONSTRAINTS.md  CUSTOM_ENGINES.md  DOCUMENTATION_FIXES.md  ENGINES.md  ENRICHMENT.md  FEATURE_CONTROL.md  GOVERNANCE_JOURNEY.md  INGESTION.md  MIGRATION.md  PLUGINS.md  SDK.md  TROUBLESHOOTING.md  api_reference.md  config_examples.md  retrieval-context-optimization.md
docs/cleanup/: fixes
docs/evaluation/: FAILURE_ANALYSIS_70_3.md  GOVERNANCE_CASE_TAXONOMY.md  PROPOSAL_LLM_BOUNDED_SELECTORS.md  README.md  RESEARCH_NOTEPAD.md  beir-results.md  fitz-gov-2.0-results.md  fitz-gov-3.0-analysis.md  fitz-gov-3.0-results.md  fitz-gov-5.0-results.md  governance.md
docs/features/: README.md  aggregation-queries.md  code-aware-chunking.md  comparison-queries.md  contextual-embeddings.md  enterprise-gateway.md  entity-graph.md  epistemic-honesty.md  freshness-authority.md  governance-benchmarking.md  hybrid-search.md  hyde.md  keyword-vocabulary.md  krag.md  multi-hop-reasoning.md  multi-query-rag.md  query-expansion.md  query-rewriting.md  reranking.md  sparse-search.md  tabular-data-routing.md  temporal-queries.md  unified-storage.md
docs/plans/: llm-validation-plan.md
docs/releases/: v0.2.0.md  v0.3.0.md
docs/roadmap/: 01-docx-pptx-chunking.md  02-tree-sitter-failures.md  03-table-vector-gap.md  04-python-syntax-fallback.md  README.md  corpus-intelligence.md  krag-agent.md  query-intelligence-pipeline.md
docs/todo/: cloud-cache-implementation.md
examples/: 01_quickstart.py  02_tabular_sql.py  03_local_ollama.py  04_multi_collection.py  05_advanced_queries.py  README.md  clara_demo.py  full_pipeline.py  ingestion_example.py  knowledge_map_example.html  quickstart.py  universal_cli.py
fitz/: __init__.py
fitz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fitz/backends/: __init__.py
fitz/cli/: __init__.py  chunk.py  cli.py  config.py  db.py  doctor.py  errors.py  help.py  init.py  plugins.py  query.py  quickstart.py
fitz/core/: __init__.py  answer.py  config.py  constraints.py  detect.py  engine.py  exceptions.py  http.py  paths.py  provenance.py  query.py  registry.py  utils.py
fitz/generation/: rgs.py
fitz/ingest/: cli.py
fitz/llm/: __init__.py  credentials.py  loader.py  registry.py  runtime.py  schema.py  transforms.py  (+1 more)
fitz_ai/: __init__.py
fitz_rag.egg-info/: PKG-INFO  SOURCES.txt
fitz_sage/: __init__.py
ingest/: cli.py
rag/: __init__.py  cli.py  pyproject.toml
rag/config/: __init__.py  default.yaml  loader.py  schema.py
rag/context/: pipeline.py
rag/context/steps/: dedupe.py  group.py  merge.py  normalize.py  pack.py  render_markdown.py
rag/core/: types.py
rag/exceptions/: __init__.py  base.py  config.py  pipeline.py  retriever.py
rag/generation/: rgs.py
rag/generation/prompting/: __init__.py  assembler.py  slots.py
rag/models/: chunk.py  document.py
rag/pipeline/: base.py  engine.py  registry.py
rag/pipeline/plugins/: debug.py  easy.py  fast.py  standard.py
rag/retrieval/: __init__.py  base.py  engine.py  registry.py
rag/retrieval/plugins/: __init__.py  dense.py
rag/retriever/: base.py  engine.py  registry.py
rag/retriever/plugins/: dense.py
src/: __init__.py
src/fitz_ingest/: cli.py  pyproject.toml
src/fitz_ingest/chunker/: base.py  chunker.py  engine.py  registry.py  simple_chunker.py
src/fitz_ingest/chunker/plugins/: simple.py
src/fitz_ingest/chunkers/: simple_chunker.py
src/fitz_ingest/exceptions/: base.py  chunking.py  config.py  vector.py
src/fitz_ingest/ingester/: engine.py  registry.py  validation.py
src/fitz_ingest/ingester/plugins/: local_fs.py
src/fitz_ingest/pipeline/: ingestion_pipeline.py
src/fitz_ingest/vector_db/: qdrant_utils.py
tests/: README.md  conftest.py  conftest_guardrails.py  test_answer_mode.py  test_anthropic_chat_plugin.py  test_azure_openai_chat_plugin.py  test_azure_openai_embedding_plugin.py  test_causal_attribution.py  test_chat_engine_registry.py  test_chat_engine_system_message.py  test_chunker_id.py  test_chunking_router.py  test_clara_engine.py  test_cli.py  test_cli_chat.py  test_cli_collections.py  test_cli_config.py  test_cli_config_show.py  test_cli_doctor.py  test_cli_ingest.py  test_cli_ingest_smoke.py  test_cli_init.py  test_cli_map.py  test_cli_query.py  test_cli_rag_smoke.py  test_cohere_llm.py  test_config.yaml  test_config_presets.py  test_constraints.py  test_context_builder.py  test_context_pipeline.py  test_context_pipeline_cross_file_dedupe.py  test_context_pipeline_markdown_integrity.py  test_context_pipeline_ordering.py  test_context_pipeline_pack_boundary.py  test_context_pipeline_unknown_group.py  test_context_pipeline_weird_inputs.py  test_default_config_loads_and_validates_minimally.py  test_default_preset_resolves.py  test_dense_retriever_basic_embedding_and_search.py  (+79 more)
tools/: README.md  ci_check.py  contract_map.py  mutation_test.py  pre_release.py
(+1910 files in other folders)
