[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fitz"
version = "0.1.0"
description = "The Fitz modular ecosystem: RAG, ingestion, documentation, mapping, grounding and more."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yan Fitzner" }
]
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7",
    "httpx>=0.24",
    "typing-extensions>=4.7",
    "typer>=0.9",
]


[project.optional-dependencies]
ingest = ["pdfminer.six", "python-docx"]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]


[project.scripts]
fitz-rag = "rag.cli:app"
fitz-ingest = "ingest.cli:app"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
