[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fitz"
version = "0.2.0"
description = "A modular, production-ready RAG framework with clean architecture and comprehensive observability."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Yan Fitzner" }
]
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7",
    "httpx>=0.24",
    "typing-extensions>=4.7",
    "typer>=0.9",
]


[project.optional-dependencies]
ingest = ["pdfminer.six", "python-docx"]
local = ["ollama>=0.1.0", "faiss-cpu>=1.7.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]


[project.urls]
Homepage = "https://github.com/yafitzdev/fitz"
Repository = "https://github.com/yafitzdev/fitz"
Issues = "https://github.com/yafitzdev/fitz/issues"
Changelog = "https://github.com/yafitzdev/fitz/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "tools*", "examples*"]


[project.scripts]
fitz = "fitz.cli.cli:app"
fitz-ingest = "fitz.ingest.cli:app"
fitz-pipeline = "fitz.pipeline.cli:app"


[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]