[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fitz-ai"
version = "0.5.0"
description = "A modular, production-ready knowledge engine platform with clean architecture and multi-paradigm support (RAG, CLaRa)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Yan Fitzner" }
]
requires-python = ">=3.10"

# Keywords for PyPI search discoverability
keywords = [
    "rag",
    "retrieval",
    "augmented",
    "generation",
    "llm",
    "ai",
    "knowledge-base",
    "vector-database",
    "semantic-search",
    "document-processing",
    "embeddings",
    "nlp",
    "clara",
    "compression",
    "machine-learning",
]

# PyPI classifiers for better categorization
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "typing-extensions>=4.7",
    "typer>=0.9",
    "jinja2>=3.1",
    # FAISS included by default for zero-friction quickstart
    "faiss-cpu>=1.7.0",
    # Docling for advanced document parsing (PDF, DOCX, PPTX, images)
    "docling>=2.0",
]

[project.optional-dependencies]
# Local LLM capabilities (Ollama)
local = [
    "ollama>=0.1.0",
]

# Knowledge map visualization (experimental)
map = [
    "umap-learn>=0.5.0",
    "scikit-learn>=1.0",
]

# Remote vector DB support (Qdrant, etc.)
remote = [
    "qdrant-client>=1.7",
]

# CLaRa compression-native engine (requires GPU)
clara = [
    "torch>=2.0",
    "transformers>=4.35",
    "accelerate>=0.24",
    "bitsandbytes>=0.41",
    "peft>=0.10",
]

# REST API server
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

# Install everything at once (docling is now in core dependencies)
all = [
    "ollama>=0.1.0",
    "qdrant-client>=1.7",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "torch>=2.0",
    "transformers>=4.35",
    "accelerate>=0.24",
    "bitsandbytes>=0.41",
    "peft>=0.10",
]


[project.urls]
Homepage = "https://github.com/yafitzdev/fitz-ai"
Repository = "https://github.com/yafitzdev/fitz-ai"
Documentation = "https://github.com/yafitzdev/fitz-ai#readme"
Issues = "https://github.com/yafitzdev/fitz-ai/issues"
Changelog = "https://github.com/yafitzdev/fitz-ai/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/yafitzdev/fitz-ai"


[tool.setuptools.packages.find]
where = ["."]
include = ["fitz_ai*"]
exclude = ["tests*", "tools*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[project.scripts]
fitz = "fitz_ai.cli.cli:app"


[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tools/contract_map/__main__.py" = ["E402"]
"tools/contract_map/common.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]