[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fitz_rag"
version = "0.1.0"
authors = [{ name = "Yan Fitzner" }]
description = "RAG retrieval + context + pipeline toolkit"
requires-python = ">=3.9"
dependencies = [
    "qdrant-client>=1.8.0",
    "cohere>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["fitz_rag*"]
