[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fitz_ingest"
version = "0.1.0"
authors = [{ name = "Yan Fitzner" }]
description = "Document ingestion toolkit for RAG pipelines"
requires-python = ">=3.9"
dependencies = [
    "qdrant-client>=1.8.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["fitz_ingest*"]
